# half-ieee754

./: CMakeLists.txt  README.txt  main.cpp
cmake/: halfConfig.cmake
include/half/: half.hpp
